# hartee-fock

./: .gitignore  H2.xyz  README.md
julia/: .HF.jl.swp  HF.jl  HF_interactive.jl  HF_interactive_session.jl  HF_modular.jl  integrals.jl  logger_setup.jl
python/: .HF.py.swp  HF.py  index.html  integrals.py  notes.txt  run_HF.py
rust/hf/: Cargo.toml  notes.txt
rust/hf/basis_sets/: 3-21g-H.json  6-31g-H.json  cc-pvDZ-H.json  cc-pvQZ-H.json  cc-pvTZ-H.json  sto-2g-H.json
rust/hf/src/: integrals.rs  lib.rs  main.rs
