[package]
name = "hf"
version = "0.1.0"
edition = "2024"

[dependencies]
basis_set = { git = "https://github.com/iggedi-ig-ig/fock-rs", package = "basis_set" }
env_logger = "0.11.8"
libm = "0.2.15"
log = "0.4.29"
nalgebra = "0.30.1"
ndarray = "0.17.1"
ndarray-linalg = { version = "0.18.0", features = ["openblas-static"] }
serde = "1.0"
serde_json = "1.0"
